         +- Using iconv for handling different text encodings
         +- SetTextFrame now allows different encodings
         +- Added --force240 to force the version number to ID3v2.4.0
         +- Added --strip to remove the whole ID3 Tag from the file
         +- Added --encoding to change the default text encoding for frames

1.11.5 - Fixed a critical bug loosing 10 bytes when creating a ID3 Tag for a raw mp3 file
1.11.4 - Changed mime-type for artwork (--set-artwork) from image/jpg to image/jpeg to make it standard conform
1.11.3 - Fixed the exit-codes by using constant names from stdlib instead of magic numbers
1.11.2 - Improved the code to compile with clang with less warnings
1.11.1 - Print version number in plain text without ANSI escape sequences
1.11.0 - Added option to force an ID3v2.3.0 even if the original file used ID3v2.4.0 (--force230)
1.10.4 - Fixed some typos
1.10.3 - Added non-standard mp3 identifier that appeared in the wild
1.10.2 - Bugs fixed
1.10.1 - Bugs fixed
1.10.0 - Improved reading of files
1.9.5 - Added more text encodings to support ID3v2.4.0
1.9.4 - Fixed an uninitialized variable bug
1.9.3 - Improved file path validation
1.9.2 - Fixed a bug that lead to an uninitialized pointer after reading a file
1.9.1 - Fixed a bug triggered by --clear
1.9.0 - Fixed a serious bug that lead to invalid ID3 tag sizes
1.8.1 - Improved ID3 header checking to detect invalid ID3 headers
1.8.0 - Added option to print detailed information of the ID3 header (--showheader)
1.7.2 - Allow some non-standard mp3 identifier that appeared in the wild
1.7.1 - Fixes an off-by-one error at memory allocation
1.7.0 - Added option to remove the whole ID3 tag from a mp3 file (--clear)
1.6.0 - Added option to create new ID3 header for bare mp3 files (--create)
1.5.1 - Check if album artwork mime-type is "image/jpeg", not only "image/jpg"
1.5.0 - Added option to print hex-dump of a specific tag (--dump)